// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should match snapshot no padding 1`] = `
.c5 {
  width: 100%;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding: 4px;
}

.c4 {
  width: 24px;
  height: 24px;
}

.c2 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  color: #231B22;
  padding: 0;
  width: 48px;
}

.c2 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c2:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c2:active svg {
  fill: #FFFFFF;
}

.c2 svg {
  fill: #231B22;
}

.c2:active {
  background-color: rgba(255,255,255,0.75);
  color: rgba(35,27,34,0.75);
}

.c2:active svg {
  fill: rgba(35,27,34,0.75);
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c2 svg {
  width: unset;
  height: unset;
  margin-right: unset;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  font-size: 14px;
}

.c0 {
  background: #FFFFFF;
  padding: 4px 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
}

.c3 {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

.c8 {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: transparent;
}

.c8 > svg {
  fill: #231B22;
}

.c8:not(:last-of-type) {
  margin-right: 4px;
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
      role="button"
      tabindex="0"
    >
      <button
        class="c2 c3"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="24"
          role="img"
          width="24"
        />
      </button>
    </div>
    <div
      class="c5"
    >
      <h1
        class="c6"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c7"
      display="flex"
    >
      <div
        class="c1"
        role="button"
        tabindex="0"
      >
        <button
          class="c2 c8"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="c4"
            height="24"
            role="img"
            width="24"
          />
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with all components 1`] = `
.c5 {
  width: 100%;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding: 4px;
}

.c4 {
  width: 24px;
  height: 24px;
}

.c2 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  color: #231B22;
  padding: 0;
  width: 48px;
}

.c2 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c2:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c2:active svg {
  fill: #FFFFFF;
}

.c2 svg {
  fill: #231B22;
}

.c2:active {
  background-color: rgba(255,255,255,0.75);
  color: rgba(35,27,34,0.75);
}

.c2:active svg {
  fill: rgba(35,27,34,0.75);
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c2 svg {
  width: unset;
  height: unset;
  margin-right: unset;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  font-size: 14px;
}

.c0 {
  background: #FFFFFF;
  padding: 4px 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

.c8 {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: transparent;
}

.c8 > svg {
  fill: #231B22;
}

.c8:not(:last-of-type) {
  margin-right: 4px;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 20px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
      role="button"
      tabindex="0"
    >
      <button
        class="c2 c3"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="24"
          role="img"
          width="24"
        />
      </button>
    </div>
    <div
      class="c5"
    >
      <h1
        class="c6"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c7"
      display="flex"
    >
      <div
        class="c1"
        role="button"
        tabindex="0"
      >
        <button
          class="c2 c8"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="c4"
            height="24"
            role="img"
            width="24"
          />
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with back button 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding: 4px;
}

.c4 {
  width: 24px;
  height: 24px;
}

.c5 {
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  color: #231B22;
  padding: 0;
  width: 48px;
}

.c2 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c2:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c2:active svg {
  fill: #FFFFFF;
}

.c2 svg {
  fill: #231B22;
}

.c2:active {
  background-color: rgba(255,255,255,0.75);
  color: rgba(35,27,34,0.75);
}

.c2:active svg {
  fill: rgba(35,27,34,0.75);
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c2 svg {
  width: unset;
  height: unset;
  margin-right: unset;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0 {
  background: #FFFFFF;
  padding: 4px 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 40px;
  height: 40px;
}

.c3 {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 20px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
      role="button"
      tabindex="0"
    >
      <button
        class="c2 c3"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="24"
          role="img"
          width="24"
        />
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      class="c6"
      display="flex"
    >
      <div
        class="c7"
      />
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with title 1`] = `
.c2 {
  width: 100%;
  text-align: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  font-size: 14px;
}

.c0 {
  background: #FFFFFF;
  padding: 4px 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 40px;
  height: 40px;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 20px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <h1
        class="c3"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c4"
      display="flex"
    >
      <div
        class="c1"
      />
    </div>
  </header>
</div>
`;

exports[`<Heading /> should match snapshot with title and back button 1`] = `
.c5 {
  width: 100%;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  padding: 4px;
}

.c4 {
  width: 24px;
  height: 24px;
}

.c2 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  color: #231B22;
  padding: 0;
  width: 48px;
}

.c2 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c2:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c2:active svg {
  fill: #FFFFFF;
}

.c2 svg {
  fill: #231B22;
}

.c2:active {
  background-color: rgba(255,255,255,0.75);
  color: rgba(35,27,34,0.75);
}

.c2:active svg {
  fill: rgba(35,27,34,0.75);
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c2 svg {
  width: unset;
  height: unset;
  margin-right: unset;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  font-size: 14px;
}

.c0 {
  background: #FFFFFF;
  padding: 4px 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: 40px;
  height: 40px;
}

.c3 {
  min-width: 40px;
  max-width: 40px;
  height: 40px;
  background-color: #D7D7E0;
}

@media (min-width:769px) {
  .c0 {
    padding: 4px 20px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
      role="button"
      tabindex="0"
    >
      <button
        class="c2 c3"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="c4"
          height="24"
          role="img"
          width="24"
        />
      </button>
    </div>
    <div
      class="c5"
    >
      <h1
        class="c6"
        font-size="small"
      >
        Gympass
      </h1>
    </div>
    <div
      class="c7"
      display="flex"
    >
      <div
        class="c8"
      />
    </div>
  </header>
</div>
`;
